scala_library(
    name = "core",
    srcs = glob([
        "src/main/java/**/*.java",
        "src/main/scala/**/*.scala",
        "src/main/scala-2.12/**/*.scala",
        "v2.3/src/main/scala/**/*.scala",
        "v2.3/src/main/java/**/*.java",
    ]),
    resources = glob([
        "src/main/resources/**",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//common/kvstore",
        "//common/network-common",
        "//common/sketch",
        "//common/tags",
        "//common/unsafe",
        "//core",
        "//launcher",
        "//sql/catalyst",
        "@maven//:com_esotericsoftware_kryo",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_flatbuffers_flatbuffers_java",
        "@maven//:com_google_guava_guava",
        "@maven//:com_univocity_univocity_parsers",
        "@maven//:commons_io_commons_io",
        "@maven//:io_dropwizard_metrics_metrics_core",
        "@maven//:javax_servlet_javax_servlet_api",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
        "@maven//:net_razorvine_pyrolite",
        "@maven//:org_antlr_antlr4_runtime",
        "@maven//:org_apache_arrow_arrow_format",
        "@maven//:org_apache_arrow_arrow_memory",
        "@maven//:org_apache_arrow_arrow_vector",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_apache_commons_commons_text",
        "@maven//:org_apache_hadoop_hadoop_common",
        "@maven//:org_apache_hadoop_hadoop_hdfs_client",
        "@maven//:org_apache_hadoop_hadoop_mapreduce_client_core",
        "@maven//:org_apache_hive_hive_common",
        "@maven//:org_apache_hive_hive_exec_core",
        "@maven//:org_apache_hive_hive_storage_api",
        "@maven//:org_apache_orc_orc_core",
        "@maven//:org_apache_orc_orc_mapreduce",
        "@maven//:org_apache_parquet_parquet_hadoop_bundle",
        "@maven//:org_json4s_json4s_ast_2_12",
        "@maven//:org_json4s_json4s_core_2_12",
        "@maven//:org_json4s_json4s_jackson_2_12",
        "@maven//:org_scala_lang_modules_scala_parser_combinators_2_12",
        "@maven//:org_scala_lang_modules_scala_xml_2_12",
        "@maven//:org_slf4j_jul_to_slf4j",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
