scala_library(
    name = "hive",
    srcs = glob([
        "src/main/java/**/*.java",
        "src/main/scala/**/*.scala",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//common/tags",
        "//common/unsafe",
        "//core",
        "//sql/catalyst",
        "//sql/core",
        "@maven//:com_esotericsoftware_kryo",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:commons_codec_commons_codec",
        "@maven//:commons_io_commons_io",
        "@maven//:org_apache_avro_avro",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_apache_hadoop_hadoop_common",
        "@maven//:org_apache_hadoop_hadoop_hdfs_client",
        "@maven//:org_apache_hadoop_hadoop_mapreduce_client_core",
        "@maven//:org_apache_hive_hive_common",
        "@maven//:org_apache_hive_hive_exec_core",
        "@maven//:org_apache_hive_hive_metastore",
        "@maven//:org_apache_hive_hive_serde",
        "@maven//:org_apache_hive_hive_storage_api",
        "@maven//:org_apache_hive_shims_hive_shims_common",
        "@maven//:org_apache_ivy_ivy",
        "@maven//:org_apache_orc_orc_core",
        "@maven//:org_apache_parquet_parquet_hadoop_bundle",
        "@maven//:org_apache_thrift_libthrift",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

# to run: bazel build //sql/hive:beeline && bazel-bin/sql/hive/beeline --verbose=true

scala_binary(
    name = "beeline",
    jvm_flags = ["-Xmx1g"],
    main_class = "org.apache.hive.beeline.BeeLine",
    runtime_deps = [
        "//sql/hive-thriftserver:library",
        "@maven//:org_apache_hive_hive_beeline",
    ],
)
