scala_library(
    name = "core",
    srcs = glob([
        "src/main/scala/**/*.scala",
    ]),
    resources = glob([
        "src/main/resources/**",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//common/network-common",
        "//core",
        "//launcher",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:com_squareup_okhttp3_okhttp",
        "@maven//:commons_codec_commons_codec",
        "@maven//:io_fabric8_kubernetes_client",
        "@maven//:io_fabric8_kubernetes_model",
        "@maven//:org_apache_hadoop_hadoop_common",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

scala_library(
    name = "test",
    srcs = glob(
        [
            "src/test/**/*.scala",
        ],
        exclude = [
            "src/test/**/*Suite.scala",
            "src/test/**/*Test.scala",
            "src/test/**/*Benchmark.scala",
            "src/test/**/*Benchmark.scala",
        ],
    ) + glob([
        "src/test/**/PodBuilderSuite.scala",
    ]),
    deps = [
        ":core",
        "//core",
        "//core:test",
        "//third_party:scalatest",
        "@maven//:io_fabric8_kubernetes_client",
        "@maven//:io_fabric8_kubernetes_model",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

[scala_test(
    name = src[:-6],
    srcs = [
        src,
    ],
    data = [
        "//bin",
    ],
    jvm_flags = [
        "-Dspark.test.home=.",
    ],
    resources = glob([
        "src/test/resources/**",
    ]),
    unused_dependency_checker_mode = "off",
    deps = [
        ":core",
        ":test",
        "//common/network-common",
        "//core",
        "//core:test",
        "@maven//:com_google_guava_guava",
        "@maven//:commons_codec_commons_codec",
        "@maven//:io_fabric8_kubernetes_client",
        "@maven//:io_fabric8_kubernetes_model",
        "@maven//:org_apache_hadoop_hadoop_common",
        "@maven//:org_jmock_jmock",
        "@maven//:org_jmock_jmock_junit4",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_slf4j_slf4j_api",
    ],
) for src in glob(
    [
        "src/test/**/*Suite.scala",
        "src/test/**/*Benchmark.scala",
        "src/test/**/*Test.scala",
    ],
)]
